--- a/src/stylesheets/base/_reset.scss
+++ b/src/stylesheets/base/_reset.scss
@@ -22,6 +22,7 @@ h4{
 input[type="text"],
 input[type="number"],
 input[type="password"],
+input[type="email"],
 select,
 textarea{
   font-family: inherit;
