--- a/src/stylesheets/base/_reset.scss
+++ b/src/stylesheets/base/_reset.scss
@@ -1,6 +1,6 @@
 body{
   font-family: 'Lato', Arial, sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 300;
 }
 *{
@@ -51,7 +51,8 @@ input[type=radio]{
   display: none;
 }
 button{
-  font-size: inherit;
+  font-size: 16px;
+  font-family: inherit;
   border: 1px solid $gray-eighty;
   border-radius: 4px;
   height: 44px;
